--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/lab": "^5.0.0-alpha.155",
     "@mui/material": "^5.14.20",
+    "date-fns": "^4.1.0",
     "encoding": "^0.1.13",
     "next": "14.0.3",
     "react": "^18.2.0",
